--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "type": "module",
     "scripts": {
         "dev": "vite",
-        "build": "vite build"
+        "production": "vite build"
     },
     "devDependencies": {
         "axios": "^1.7.4",
